--- a/index.html
+++ b/index.html
@@ -5,115 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WTG Protocols</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="menu.css" />
   </head>
   <body>
-    <table>
-      <thead>
-        <th class="header">1.3 PRIMARY SURVEY</th>
-        <th class="level">
-          <p>E</p>
-          <p>M</p>
-          <p>R</p>
-        </th>
-        <th class="level">
-          <p>E</p>
-          <p>M</p>
-          <p>T</p>
-        </th>
-        <th class="level">
-          <p>A</p>
-          <p>E</p>
-          <p>M</p>
-          <p>T</p>
-        </th>
-        <th class="level">
-          <p>I</p>
-          <p>N</p>
-          <p>T</p>
-        </th>
-        <th class="level">
-          <p>P</p>
-          <p>M</p>
-        </th>
-        <th class="level">
-          <p>A</p>
-          <p>P</p>
-          <p>M</p>
-        </th>
-      </thead>
-      <tr>
-        <td>1. Form general impression of the patient. Consider apperance, work of breathing, and circulation to skin. If a life-threatening condition is found, treat it immediately.</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr>
-        <td>2. Assess patient's <b>mental status</b> (maintain spinal immobilization if needed).</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr class="sub">
-        <td>a. <b>A</b>lert | Responds to <b>V</b>erbal stimuli | Responds to <b>P</b>ainful stimuli | <b>U</b>nresponsive to verbal/painful stimuli (no gag or cough).</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr class="sub">
-        <td>b. If the victim is unresponsive with no breathing or no normal breathing (i.e. only gasping), see <a href="">CARDIAC ARREST - ADULT</a> or <a href="">CARDIAC ARREST - PEDIATRIC</a>.</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr>
-        <td>3. Address any <a href="">MASSIVE HEMORRHAGE</a></td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr class="sub">
-        <td>a. Locate the source of any major bleeding</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr class="sub">
-        <td>b. Provide direct pressure until a clot forms, perferably with hemostatic gauze in a wound packing technique</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-      <tr class="sub">
-        <td>c. If necessary, utilize commercial tourniquets to control bleeding, <b>DO NOT DELAY TOURNIQUET APPLICATION - IF IN DOUBT, APPLY TOURNIQUET</b></td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-        <td>&#183;</td>
-      </tr>
-    </table>
+    <p class="list-header">Patient Assessment</p>
+    <ul>
+      <li>General</li>
+      <li>COVID-19 - Global Pandemic Changes</li>
+      <li>Scene Size-Up</li>
+      <li>Patient Determination</li>
+      <li><a href="./Protocols/primarySurvey.html">Primary Survey</a></li>
+      <li>Secondary Survey</li>
+      <li>Reassessment</li>
+      <li>Death Determination</li>
+    </ul>
+    <p class="list-header">Dysrhythmia Management</p>
+    <ul>
+      <li>Cardiac Arrest</li>
+      <li>Cardiac Arrest - Asystole/PEA</li>
+      <li>Cardiac Arrest - V-Fib/Pulseless V-Tach</li>
+      <li>Bradycardia</li>
+      <li>Tachycardia</li>
+      <li>Post Resuscitation Care</li>
+      <li>Special Resuscitation Circumstances, All ages</li>
+    </ul>
+    <p class="list-header">Medical</p>
+    <ul>
+      <li>Altered Mental Status</li>
+      <li>Allergic Reaction/Anaphylaxis</li>
+      <li>Chest Pain (Non-Traumatic) STEMI</li>
+      <li>Behavioral/Patient Restraint</li>
+      <li>Environmental - Heat Exposure</li>
+      <li>Environmental Hypothermia</li>
+      <li>Environmental - Bites and Envenomation</li>
+      <li>Hyperglycemia</li>
+      <li>Hypoglycemia</li>
+      <li>Nausea - Vomiting</li>
+      <li><a href="./Protocols/seizures.html">Seizures</a></li>
+    </ul>
+    <p class="list-header">Medications</p>
+    <ul>
+      <li><a href="./Meds/adenosine.html">Adenosine</a></li>
+    </ul>
   </body>
 </html>
