--- a/index.html
+++ b/index.html
@@ -3,49 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WTG Protocols</title>
-    <link rel="stylesheet" href="menu.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <title>Wintergreen Fire and Rescue</title>
+    <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <p class="list-header">Patient Assessment</p>
-    <ul>
-      <li>General</li>
-      <li>COVID-19 - Global Pandemic Changes</li>
-      <li>Scene Size-Up</li>
-      <li>Patient Determination</li>
-      <li><a href="./Protocols/primarySurvey.html">Primary Survey</a></li>
-      <li>Secondary Survey</li>
-      <li>Reassessment</li>
-      <li>Death Determination</li>
-    </ul>
-    <p class="list-header">Dysrhythmia Management</p>
-    <ul>
-      <li>Cardiac Arrest</li>
-      <li>Cardiac Arrest - Asystole/PEA</li>
-      <li>Cardiac Arrest - V-Fib/Pulseless V-Tach</li>
-      <li>Bradycardia</li>
-      <li>Tachycardia</li>
-      <li>Post Resuscitation Care</li>
-      <li>Special Resuscitation Circumstances, All ages</li>
-    </ul>
-    <p class="list-header">Medical</p>
-    <ul>
-      <li>Altered Mental Status</li>
-      <li>Allergic Reaction/Anaphylaxis</li>
-      <li>Chest Pain (Non-Traumatic) STEMI</li>
-      <li>Behavioral/Patient Restraint</li>
-      <li>Environmental - Heat Exposure</li>
-      <li>Environmental Hypothermia</li>
-      <li>Environmental - Bites and Envenomation</li>
-      <li>Hyperglycemia</li>
-      <li>Hypoglycemia</li>
-      <li>Nausea - Vomiting</li>
-      <li><a href="./Protocols/seizures.html">Seizures</a></li>
-    </ul>
-    <p class="list-header">Medications</p>
-    <ul>
-      <li><a href="./Meds/adenosine.html">Adenosine</a></li>
-    </ul>
+    <h1 class="main-header">Menu</h1>
+    <div class="margin-left margin-right margin-top grid grid-2">
+      <button class="menu-btn" onclick="window.location='./Protocol/index.html'">Protocols</button>
+      <button class="menu-btn red" onclick="window.location='./CodeAlert/codealert.html'">Code Alert</button>
+      <button class="menu-btn" onclick="window.location = './Metronome/metronome.html'">Metronome</button>
+      <button class="menu-btn" onclick="windows.location = './RSI/rsi.html'">RSI</button>
+    </div>
   </body>
+  <script>
+    // alert(
+    //   "This website is currently underdevelopment and is not intended for use in emergency or a real-life setting."
+    // );
+  </script>
 </html>
