--- a/Protocol/index.html
+++ b/Protocol/index.html
@@ -9,17 +9,16 @@
   </head>
   <body>
     <h1 class="main-header"><span class="backBtn" onclick="window.location ='../index.html'">Back</span>Protocols</h1>
-    <div class="margin-left margin-right margin-top grid grid-2">
+    <div class="margin-left margin-right margin-top margin-bottom grid grid-2">
       <button class="menu-btn" onclick="window.location.href='./Protocols/protocol.html'">Protocols</button>
       <button class="menu-btn" onclick="window.location.href='./Meds/meds.html'">Medications</button>
       <button class="menu-btn">Procedures</button>
       <button class="menu-btn" onclick="window.location.href='./Reference/reference.html'">References</button>
-      <button class="menu-btn" onclick="window.location.href='./contacts.html'">Contacts</button>
     </div>
   </body>
   <script>
-    // alert(
-    //   "This website is currenlty in development stages and should not be used in an emergency setting. Please refer to your local protocols. By clicking close you have acknowledged this message"
-    // );
+    alert(
+      "This website is currenlty in development stages and should not be used in an emergency setting. Please refer to your local protocols. By clicking close you have acknowledged this message"
+    );
   </script>
 </html>
