--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
-    <h1 class="main-header">Menu</h1>
-    <div class="margin-left margin-right margin-top grid grid-2">
+    <div class="main-header">
+      <img src="./logo.png" />
+      <h1>Wintergreen Rescue Protocols</h1>
+    </div>
+    <div class="margin-left margin-right margin-bottom grid grid-2">
       <button class="menu-btn" onclick="window.location='./Protocol/index.html'">Protocols</button>
-      <button class="menu-btn red" onclick="window.location='./CodeAlert/codealert.html'">Code Alert</button>
+      <button class="menu-btn red" onclick="window.location.href='handtevy://'">Handtevy Mobile</button>
+      <button class="menu-btn" onclick="window.location.href='./contacts.html'">Contacts</button>
       <button class="menu-btn" onclick="window.location = './Metronome/metronome.html'">Metronome</button>
       <button class="menu-btn" onclick="windows.location = './RSI/rsi.html'">RSI</button>
     </div>
