--- a/Metronome/metronome.html
+++ b/Metronome/metronome.html
@@ -21,11 +21,8 @@
   <body>
     <div class="container align-center flex flex-column full-body">
       <h1 class="main-header"><span class="backBtn" onclick="window.location ='../index.html'">Back</span>Metronome</h1>
-      <h1 class="font-size-large" id="seconds">30</h1>
-      <div
-        class="grid grid-2 flex flex-column margin-bottom margin-left margin-right"
-        style="margin-top: auto; margin-bottom: 25px"
-      >
+      <h1 class="font-size-large" id="seconds">60</h1>
+      <div class="grid grid-2 flex flex-column margin-bottom margin-left margin-right" style="margin-top: auto; margin-bottom: 25px">
         <button id="down">Decrease</button>
         <button id="up">Increase</button>
         <button class="grid-span-all green" id="control">Start</button>
